[package]
name = "dns_proxy"
version = "0.1.0"
edition = "2021"
authors = ["Jose Gotuzzo <gotuzzoj23@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dns-parser = "0.8.0"
simplelog = "^0.12.0"
log = "0.4.17"
tokio = { version = "1.18.1", features = ["full"] }
